Question, answer components added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
